[project]
name = "nih-umls-mcp"
version = "0.2.0"
description = "MCP server for the NIH UMLS (Unified Medical Language System) API"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Jared Erwin"}
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nih_umls_mcp"]

[project.scripts]
nih-umls-mcp = "nih_umls_mcp.server:main"
